EEC_InitBackup/src/objects/FCC_Assistant__c.object
<CustomObject>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, it means that it&apos;s the latest information available for this provider</inlineHelpText>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date__c</fullName>
        <label>Certificate Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>Certificate Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assistants</relationshipLabel>
        <relationshipName>FCC_Assistants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_Transaction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source Transaction</label>
        <referenceTo>Licensing_Transaction__c</referenceTo>
        <relationshipLabel>Assistants</relationshipLabel>
        <relationshipName>FCC_Assistants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>FCC Assistant</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>FCC Assistant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FCC Assistants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>